eval_outputs/diff_and_source_code/code_change_and_test_change/fourth/google/refined_chain-of-thought.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_chain-of-thought.spec.ts: Unexpected token, expected "{" (121:13)

  119 |     } catch (err) {
  120 |       setError(err instanceof Error? err.message : "Failed to update note")
> 121 |     } finally
      |              ^

   at refined_chain-of-thought.spec.ts:121

  119 |     } catch (err) {
  120 |       setError(err instanceof Error? err.message : "Failed to update note")
> 121 |     } finally
      |             ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

